--- a/index.html
+++ b/index.html
@@ -1,11 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neil Rosen - Web Developer</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha384-zkVU3uz0UAd1tgssvloFcDw2eOW+9SjMGMdG97Iz9N+O9iI1CDz8jmLEP98C4VPk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+
+  <!-- START NAV -->
+  <nav id="navbar" class="nav">
+    <div class="nav-logo">
+      <h1>Neil Rosen</h1>
+    </div>
+    <ul class="nav-list">
+      <li><a href="#about">About</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  <!-- END NAV -->
+
+  <!-- START WELCOME SECTION -->
+  <section id="welcome-section" class="welcome-section">
+    <div class="welcome-content">
+      <h1>Hi, I'm Neil Rosen</h1>
+      <p class="subtitle">Web Developer</p>
+    </div>
+  </section>
+  <!-- END WELCOME SECTION -->
+
+  <!-- START ABOUT ME SECTION -->
+  <section id="about" class="about-section">
+    <div class="section-header">
+      <h2>About Me</h2>
+    </div>
+    <div class="about-content">
+      <p>Your introduction and some information about yourself go here.</p>
+    </div>
+  </section>
+  <!-- END ABOUT ME SECTION -->
+
+  <!-- START EDUCATION SECTION -->
+  <section id="education" class="education-section">
+    <div class="section-header">
+      <h2>Education</h2>
+    </div>
+    <div class="education-content">
+      <p>Your educational background and achievements go here.</p>
+    </div>
+  </section>
+  <!-- END EDUCATION SECTION -->
+
+  <!-- START EXPERIENCE SECTION -->
+  <section id="experience" class="experience-section">
+    <div class="section-header">
+      <h2>Experience</h2>
+    </div>
+    <div class="experience-content">
+      <p>Your work experience and professional journey go here.</p>
+    </div>
+  </section>
+  <!-- END EXPERIENCE SECTION -->
+
+  <!-- START SKILLS SECTION -->
+  <section id="skills" class="skills-section">
+    <div class="section-header">
+      <h2>Skills</h2>
+    </div>
+    <div class="skills-content">
+      <p>Your technical skills and expertise go here.</p>
+    </div>
+  </section>
+  <!-- END SKILLS SECTION -->
+
+  <!-- START PROJECTS SECTION -->
+  <section id="projects" class="projects-section">
+    <div class="section-header">
+      <h2>Projects</h2>
+    </div>
+    <div class="projects-grid">
+      <!-- Example Project -->
+      <div class="project">
+        <img src="https://via.placeholder.com/400" alt="project">
+        <div class="project-info">
+          <h3>Project Name</h3>
+          <p>Description of the project goes here.</p>
+        </div>
+      </div>
+      <!-- Add more project items as needed -->
+    </div>
+  </section>
+  <!-- END PROJECTS SECTION -->
+
+  <!-- START CONTACT SECTION -->
+  <section id="contact" class="contact-section">
+    <div class="section-header">
+      <h2>Contact</h2>
+    </div>
+    <div class="contact-links">
+      <a href="https://linkedin.com/in/your-linkedin" target="_blank">
+        <i class="fab fa-linkedin"></i> LinkedIn
+      </a>
+      <a href="https://github.com/your-github" target="_blank">
+        <i class="fab fa-github"></i> GitHub
+      </a>
+      <a href="mailto:your-email@example.com">
+        <i class="fas fa-envelope"></i> Email
+      </a>
+    </div>
+  </section>
+  <!-- END CONTACT SECTION -->
+
+  <!-- START FOOTER SECTION -->
+  <footer>
+    <p>&copy; 2024 Neil Rosen. All Rights Reserved.</p>
+  </footer>
+
 </body>
+
 </html>
