--- a/index.html
+++ b/index.html
@@ -1,130 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Neil Rosen - Web Developer</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    integrity="sha384-zkVU3uz0UAd1tgssvloFcDw2eOW+9SjMGMdG97Iz9N+O9iI1CDz8jmLEP98C4VPk" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap">
+    <link rel="stylesheet" href="styles.css">
+    <title>Portfolio</title>
 </head>
-
 <body>
+    <nav>
+        <ul>
+            <li><a href="#about">♡ About</a></li>
+            <li><a href="#education">♡ Education</a></li>
+            <li><a href="#experience">♡ Experience</a></li>
+            <li><a href="#skills">♡ Skills</a></li>
+            <li><a href="#projects">♡ Projects</a></li>
+            <li><a href="#contact">♡ Contact</a></li>
+        </ul>
+    </nav>
 
-  <!-- START NAV -->
-  <nav id="navbar" class="nav">
-    <div class="nav-logo">
-      <h1>Neil Rosen</h1>
-    </div>
-    <ul class="nav-list">
-      <li><a href="#about">About</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  <!-- END NAV -->
+    <header>
+        <h1>Hey, I'm Neil Rosen</h1>
+        <p><i>An aspiring Web Developer.</i></p>
+    </header>
 
-  <!-- START WELCOME SECTION -->
-  <section id="welcome-section" class="welcome-section">
-    <div class="welcome-content">
-      <h1>Hi, I'm Neil Rosen</h1>
-      <p class="subtitle">Web Developer</p>
-    </div>
-  </section>
-  <!-- END WELCOME SECTION -->
-
-  <!-- START ABOUT ME SECTION -->
-  <section id="about" class="about-section">
-    <div class="section-header">
-      <h2>About Me</h2>
-    </div>
-    <div class="about-content">
-      <p>Your introduction and some information about yourself go here.</p>
-    </div>
-  </section>
-  <!-- END ABOUT ME SECTION -->
-
-  <!-- START EDUCATION SECTION -->
-  <section id="education" class="education-section">
-    <div class="section-header">
-      <h2>Education</h2>
-    </div>
-    <div class="education-content">
-      <p>Your educational background and achievements go here.</p>
-    </div>
-  </section>
-  <!-- END EDUCATION SECTION -->
-
-  <!-- START EXPERIENCE SECTION -->
-  <section id="experience" class="experience-section">
-    <div class="section-header">
-      <h2>Experience</h2>
-    </div>
-    <div class="experience-content">
-      <p>Your work experience and professional journey go here.</p>
-    </div>
-  </section>
-  <!-- END EXPERIENCE SECTION -->
-
-  <!-- START SKILLS SECTION -->
-  <section id="skills" class="skills-section">
-    <div class="section-header">
-      <h2>Skills</h2>
-    </div>
-    <div class="skills-content">
-      <p>Your technical skills and expertise go here.</p>
-    </div>
-  </section>
-  <!-- END SKILLS SECTION -->
-
-  <!-- START PROJECTS SECTION -->
-  <section id="projects" class="projects-section">
-    <div class="section-header">
-      <h2>Projects</h2>
-    </div>
-    <div class="projects-grid">
-      <!-- Example Project -->
-      <div class="project">
-        <img src="https://via.placeholder.com/400" alt="project">
-        <div class="project-info">
-          <h3>Project Name</h3>
-          <p>Description of the project goes here.</p>
+    <section id="about">
+        <h2>About Me</h2>
+        <div class="section-content">
+            <img src="pic.jpg" alt="Your Image" class="about-image">
+	    <br></br>
+            <br></br>
+            <b>Hello, I'm Neil Rosen Repato, a third-year Information Technology student with a focus on Web Technology. Passionate about creating seamless online experiences, I aspire to become a proficient web developer and contribute to the ever-evolving digital landscape.</b>
         </div>
-      </div>
-      <!-- Add more project items as needed -->
-    </div>
-  </section>
-  <!-- END PROJECTS SECTION -->
+    </section>
 
-  <!-- START CONTACT SECTION -->
-  <section id="contact" class="contact-section">
-    <div class="section-header">
-      <h2>Contact</h2>
-    </div>
-    <div class="contact-links">
-      <a href="https://linkedin.com/in/your-linkedin" target="_blank">
-        <i class="fab fa-linkedin"></i> LinkedIn
-      </a>
-      <a href="https://github.com/your-github" target="_blank">
-        <i class="fab fa-github"></i> GitHub
-      </a>
-      <a href="mailto:your-email@example.com">
-        <i class="fas fa-envelope"></i> Email
-      </a>
-    </div>
-  </section>
-  <!-- END CONTACT SECTION -->
+    <section id="education">
+        <h2>Education</h2>
+        <div class="section-content">
+            <b>Undergraduate</b>
+		<li>Bachelor of Science in Information Technology - Major in Web Technology</li>
+		<li>University of the Cordilleras</li>
+	        <li>Governor Pack Road, Baguio City</li>
+                <li>Expected date of graduation: August 2024</li>
+ 	    <b>Senior High School</b>
+		<li>Technical-Vocational Track – Information and Communications Technology Strand</li>
+		<li>Lyceum-Northwestern University</li>
+		<li>Tapuac Street, Dagupan City, Pangasinan</li>
+		<li>June 2021</li>
+	    <b>Junior High School</b>
+		<li>Wonderland School of Dagupan, Inc.</li>
+		<li>Herrero Street, Dagupan City, Pangasinan</li>
+		<li>April 2019</li>
+            <b>Primary</b>
+		<li>Wonderland School of Dagupan, Inc.</li>
+		<li>Herrero Street, Dagupan City, Pangasinan</li>
+		<li>March 2015</li>
+        </div>
+    </section>
 
-  <!-- START FOOTER SECTION -->
-  <footer>
-    <p>&copy; 2024 Neil Rosen. All Rights Reserved.</p>
-  </footer>
+    <section id="experience">
+        <h2>Experience</h2>
+        <div class="section-content">
+           <b>AWARDS and CERTIFICATES</b>
+		<br><b>Linux Essentials Professional Development Certificate from the Linux Professional Institute (LPI)</b></br>
+		<li>July 17, 2022</li>
+		<li>CISCO Networking Academy</li>
+		<b>Responsive Web Design Developer Certification</b>
+		<li>November 24, 2022</li>
+		<li>freeCodeCamp.org </li>
+		<br></br>
+	        <b>LEADERSHIP and MEMBERSHIP</b>
+		<br><b>Member, Manlingkor Ya Kalengweran</b></br>
+		<li>Dagupan City, Pangasinan</li>
+		<li>June 2017 – December 2017</li>
+		<b>Representative, Supreme Student Government</b>
+		<li>Wonderland School of Dagupan, Inc.</li>
+		<li>July 2018 – March 2019</li>
+        </div>
+    </section>
 
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="section-content">
+            <li><b>Knowledgeable</b> in programming / scripting language: Java, SQL</li>
+	    <li><b>Proficient</b> with multimedia software: Adobe Photoshop, Microsoft Office, Canva</li>
+	    <li><b>Knowledgeable</b> in programming language: Python, C++, HTML, Arduino</li>
+	    <li>Proficient in debugging and troubleshooting</li>
+	    <li>Proficient in speaking skills and public speaking</li>
+	    <li>Proven leadership ability and quality as evidenced in various organizations lead and helped; being that as the Supreme Student Government</li>
+        </div>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project-grid">
+            <div class="project-box">
+                <img src="https://github.com/roseeen/SurveyForm.github.io/blob/main/img.png?raw=true"
+        alt="project" alt="Project 1">
+                <h3>Survey Form</h3>
+                <p>A Website Survey Questionnaire that is a powerful tool designed for collecting feedback and insights from users to enhance the overall website experience.</p>
+                <a href="https://roseeen.github.io/SurveyForm.github.io" target="_blank">View Project</a>
+            </div>
+            <div class="project-box">
+                <img src="https://github.com/roseeen/TributePage.github.io/blob/main/img.png?raw=true"
+        alt="project" alt="Project 2">
+                <h3>Tribute Page</h3>
+                <p>A website tribute page for Elon Musk that celebrates the life and achievements of the visionary entrepreneur. This  showcases his remarkable life timeline.</p>
+                <a href="https://roseeen.github.io/TributePage.github.io/" target="_blank">View Project</a>
+            </div>
+	    <div class="project-box">
+                <img src="https://github.com/roseeen/TechnicalDocumentation.github.io/blob/main/img.png?raw=true"
+        alt="project" alt="Project 3">
+                <h3>Technical Documentation</h3>
+                <p>A technical documentation website for CSS documentation designed to provide comprehensive information about Cascading Style Sheets (CSS).</p>
+                <a href="https://roseeen.github.io/TechnicalDocumentation.github.io/" target="_blank">View Project</a>
+            </div>
+	    <div class="project-box">
+                <img src="https://github.com/roseeen/ProductLanding.github.io/blob/main/img.png?raw=true"
+        alt="project" alt="Project 4">
+                <h3>Product Landing Page</h3>
+                <p>A product landing page made for featuring Nike and its products.</p>
+                <a href="https://roseeen.github.io/ProductLanding.github.io/" target="_blank">View Project</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+    <h2>Contact Information</h2>
+    <ul>
+        <li><a href="https://facebook.com/itsneilrosen" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook Icon">Facebook</a></li>
+        <li><a href="https://github.com/roseeen" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Icon">GitHub</a></li>
+        <li><a href="https://twitter.com/roseeen_" target="_blank"><img src="https://www.iconpacks.net/icons/2/free-twitter-logo-icon-2429-thumb.png" alt="Twitter Icon">Twitter</a></li>
+        <li><a href="mailto:rneilrosen@gmail.com"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-email-512.png" alt="Email Icon">Send a mail</a></li>
+        <li><a href="tel:0995-196-5332"><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/phone-512.png" alt="Phone Icon">Call me</a></li>
+    </ul>
+</section>>
+    <script src="script.js"></script>
 </body>
-
 </html>
