--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
     <ul>
         <li><a href="https://facebook.com/itsneilrosen" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook Icon">Facebook</a></li>
         <li><a href="https://github.com/roseeen" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Icon">GitHub</a></li>
-        <li><a href="https://twitter.com/roseeen_" target="_blank"><img src="https://png.pngtree.com/png-vector/20221018/ourmid/pngtree-twitter-social-media-round-icon-png-image_6315985.png" alt="Twitter Icon">Twitter</a></li>
-        <li><a href="mailto:rneilrosen@gmail.com"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGhCbesLp4_2wY26RL6Ft8gRbT7q2lRvdt8w&usqp=CAU" alt="Email Icon">Send a mail</a></li>
-        <li><a href="tel:0995-196-5332"><img src="https://static-00.iconduck.com/assets.00/phone-icon-1561x2048-qjhf7be8.png" alt="Phone Icon">Call me</a></li>
+        <li><a href="https://twitter.com/roseeen_" target="_blank"><img src="https://seeklogo.com/images/T/twitter-icon-circle-blue-logo-0902F48837-seeklogo.com.png" alt="Twitter Icon">Twitter</a></li>
+        <li><a href="mailto:rneilrosen@gmail.com"><img src="https://cdn-icons-png.flaticon.com/512/3178/3178158.png" alt="Email Icon">Send a mail</a></li>
+        <li><a href="tel:0995-196-5332"><img src="https://icons.iconarchive.com/icons/icons8/windows-8/512/Mobile-Phone-icon.png" alt="Phone Icon">Call me</a></li>
     </ul>
 </section>>
     <script src="script.js"></script>
