--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap">
     <link rel="stylesheet" href="styles.css">
     <title>Portfolio</title>
 </head>
 <body>
+<button id="darkModeToggle">Toggle Dark Mode</button>
     <nav>
         <ul>
             <li><a href="#about">♡ About</a></li>
@@ -25,10 +25,11 @@
         <p><i>An aspiring Web Developer.</i></p>
     </header>
 
+
     <section id="about">
         <h2>About Me</h2>
         <div class="section-content">
-            <img src="pic.jpg" alt="Your Image" class="about-image">
+            <img src="pic.jpg" alt="Your Image" class="about-image no-invert">
 	    <br></br>
             <br></br>
             <b>Hello, I'm Neil Rosen Repato, a third-year Information Technology student with a focus on Web Technology. Passionate about creating seamless online experiences, I aspire to become a proficient web developer and contribute to the ever-evolving digital landscape.</b>
@@ -96,29 +97,28 @@
         <h2>Projects</h2>
         <div class="project-grid">
             <div class="project-box">
-                <img src="https://github.com/roseeen/SurveyForm.github.io/blob/main/img.png?raw=true"
-        alt="project" alt="Project 1">
+                <img src="https://github.com/roseeen/SurveyForm.github.io/blob/main/img.png?raw=true" alt="project" class="no-invert">
                 <h3>Survey Form</h3>
                 <p>A Website Survey Questionnaire that is a powerful tool designed for collecting feedback and insights from users to enhance the overall website experience.</p>
                 <a href="https://roseeen.github.io/SurveyForm.github.io" target="_blank">View Project</a>
             </div>
             <div class="project-box">
                 <img src="https://github.com/roseeen/TributePage.github.io/blob/main/img.png?raw=true"
-        alt="project" alt="Project 2">
+        alt="project" alt="Project 2" class="no-invert">
                 <h3>Tribute Page</h3>
                 <p>A website tribute page for Elon Musk that celebrates the life and achievements of the visionary entrepreneur. This  showcases his remarkable life timeline.</p>
                 <a href="https://roseeen.github.io/TributePage.github.io/" target="_blank">View Project</a>
             </div>
 	    <div class="project-box">
                 <img src="https://github.com/roseeen/TechnicalDocumentation.github.io/blob/main/img.png?raw=true"
-        alt="project" alt="Project 3">
+        alt="project" alt="Project 3" class="no-invert">
                 <h3>Technical Documentation</h3>
                 <p>A technical documentation website for CSS documentation designed to provide comprehensive information about Cascading Style Sheets (CSS).</p>
                 <a href="https://roseeen.github.io/TechnicalDocumentation.github.io/" target="_blank">View Project</a>
             </div>
 	    <div class="project-box">
                 <img src="https://github.com/roseeen/ProductLanding.github.io/blob/main/img.png?raw=true"
-        alt="project" alt="Project 4">
+        alt="project" alt="Project 4" class="no-invert">
                 <h3>Product Landing Page</h3>
                 <p>A product landing page made for featuring Nike and its products.</p>
                 <a href="https://roseeen.github.io/ProductLanding.github.io/" target="_blank">View Project</a>
@@ -130,12 +130,12 @@
     <h2>Contact Information</h2>
     <ul>
         <li><a href="https://facebook.com/itsneilrosen" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook Icon">Facebook</a></li>
-        <li><a href="https://github.com/roseeen" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Icon">GitHub</a></li>
+        <li><a href="https://github.com/roseeen" target="_blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" alt="GitHub Icon">GitHub</a></li>
         <li><a href="https://twitter.com/roseeen_" target="_blank"><img src="https://seeklogo.com/images/T/twitter-icon-circle-blue-logo-0902F48837-seeklogo.com.png" alt="Twitter Icon">Twitter</a></li>
-        <li><a href="mailto:rneilrosen@gmail.com"><img src="https://cdn-icons-png.flaticon.com/512/3178/3178158.png" alt="Email Icon">Send a mail</a></li>
-        <li><a href="tel:0995-196-5332"><img src="https://icons.iconarchive.com/icons/icons8/windows-8/512/Mobile-Phone-icon.png" alt="Phone Icon">Call me</a></li>
+        <li><a href="mailto:rneilrosen@gmail.com"><img src="https://static.vecteezy.com/system/resources/previews/010/153/613/non_2x/email-and-mail-icon-sign-symbol-design-free-png.png" alt="Email Icon">Send a mail</a></li>
+        <li><a href="tel:0995-196-5332"><img src="https://static.vecteezy.com/system/resources/previews/018/726/054/original/accept-phone-icon-social-icon-set-png.png" alt="Phone Icon">Call me</a></li>
     </ul>
-</section>>
+</section>
     <script src="script.js"></script>
 </body>
 </html>
