--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-<button id="darkModeToggle">Dark Mode</button>
+<button id="darkModeToggle">Toggle Dark Mode</button>
     <nav>
         <ul>
             <li><a href="#about">♡ About</a></li>
