--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <section id="contact">
     <h2>Contact Information</h2>
     <ul>
-        <li><a href="https://facebook.com/itsneilrosen" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook Icon">Facebook</a></li>
+        <li><a href="https://facebook.com/itsneilrosen" target="_blank"><img src="https://static-00.iconduck.com/assets.00/facebook-icon-512x512-seb542ju.png" alt="Facebook Icon">Facebook</a></li>
         <li><a href="https://github.com/roseeen" target="_blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" alt="GitHub Icon">GitHub</a></li>
         <li><a href="https://twitter.com/roseeen_" target="_blank"><img src="https://seeklogo.com/images/T/twitter-icon-circle-blue-logo-0902F48837-seeklogo.com.png" alt="Twitter Icon">Twitter</a></li>
         <li><a href="mailto:rneilrosen@gmail.com"><img src="https://static.vecteezy.com/system/resources/previews/010/153/613/non_2x/email-and-mail-icon-sign-symbol-design-free-png.png" alt="Email Icon">Send a mail</a></li>
